--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,23 @@
 /* Add CSS Styling */
+same {
+    background-color: pink;
+}
+
+ #n2 {
+     color: blue;
+     font-size: 40px;
+ }
+
+ .N3 {
+    font-size: 30px;
+ }
+
+ #n4 {
+    font-size: 20px;
+    font-weight: bold;
+    background-color: lime;
+ }
+
+
+
+
